# MyProlog

./: README.md  dune-project  myProlog.opam
lib/mpInterpreter/: dune
lib/mpInterpreter/src/: Freshing.ml  Helpers.ml  MutSubst.ml  PredMap.ml  Printer.ml  SLD.ml  SimpleSubst.ml  Solver.ml  Unify.ml
lib/mpInterpreter/src/debug/: SLD_debug.ml  Unify_debug.ml
lib/mpParser/: dune
lib/mpParser/otherFiles/: yaccParser.mly
lib/mpParser/src/: ast.ml  errors.ml  lexer.ml  lexer.mll  parser.ml  parser.mli  yaccParser.ml  yaccParser.mli
test/mpInterpreter/: dune
test/mpInterpreter/src/: RunTests.ml  SolverTests.ml  TestGreet.ml  TestHelpers.ml
test/mpInterpreter/testFiles/SolverTests/: basic1.txt  basic2.txt  basic3.txt  perm.txt  rule1.txt
